<resources>
    <string name="app_name">SportsGuru</string>
    <string name="welcome_title">Benvenuto in SportsGuru</string>
    <string name="welcome_description">Ricerca statistiche di atleti inserendo il nome dell\'atleta, la statistica che ti interessa e a partire da che anno</string>
    <string name="welcome_start">Iniziamo</string>
    <string name="athlete_title">Inserisci l\'atleta che ti interessa</string>
    <string name="name">Nome</string>
    <string name="athlete">Atleta</string>
    <string name="surname">Cognome</string>
    <string name="stat">Statistica</string>
    <string name="year">Anno</string>
    <string name="stat_title">Inserisci la statistica che ti interessa</string>
    <string name="next">Continua</string>
    <string name="back">Indietro</string>
    <string name="confirm">Conferma</string>
    <string name="insert_name_error">Inserire un nome</string>
    <string name="insert_surname_error">Inserire un cognome</string>
    <string name="insert_stat_error">Inserire la statistica</string>
    <string name="insert_year_error">Inserire l\'anno</string>
    <string name="confirm_title">Conferma i tuoi dati</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_title">Inserisci la data da cui far partire la statistica</string>
    <string name="date_select">Seleziona la data</string>
    <string name="new_research">Nuova Ricerca</string>
    <string name="compare">Confronta</string>
    <string name="compare_title">Confronto</string>
    <string name="change_compare">Compara con un altro atleta</string>
    <string-array name="date_spinner">
        <item>Ultima partita</item>
        <item>Ultimo mese</item>
        <item>Ultimi 3 mesi</item>
        <item>Ultimo anno</item>
        <item>Ultimi 3 anni</item>
        <item>In carriera</item>
        <item>Inserisci data manualmente</item>
    </string-array>
</resources>