<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".welcome.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/green"
            android:text="@string/welcome_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_marginTop="150dp"
            android:layout_marginHorizontal="40dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/welcome_description" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcome_iniziamo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/green"
        android:text="@string/welcome_start"/>

</RelativeLayout>